Fixes and tweaks to using different resource packs